<resources>
    <string name="app_name">Student Portal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Login</string>
    <string name="username_hint">Enter Your Email</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="student_text">Student</string>
    <string name="lecturer_text">Professor</string>
    <string name="empty_login_error_message">Required</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_error">Something went wrong</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_group">Group</string>
    <string name="menu_subject">Subjects</string>
    <string name="menu_assignments">Assignments</string>
    <string name="menu_table">Table</string>
    <string name="menu_events">Events</string>
    <string name="menu_result">Results</string>
    <string name="prof_prefix">By Dr/ %s</string>
    <string name="attendance">Attendance</string>
    <string name="work">Work</string>
    <string name="midterm">Midterm</string>
    <string name="semester">Semester</string>
    <string name="assignments">Assignments :</string>
    <string name="sources">Sources :</string>
    <string name="year_work">Year Work :</string>
    <string name="subject_text">Subject</string>
    <string name="result_text">Result</string>
    <string name="grade_text">Grade:</string>
    <string name="event_image_content_description">Event Image</string>
    <string name="by">By / %s</string>
    <string name="event_image_transition">event_image_transition</string>
    <string name="menu_id_prefix">ID : %s</string>
    <string name="logout">Logout</string>
    <string name="main_error_message">Sorry , Something went Wrong</string>
    <string name="main_no_internet_error">Sorry , No Internet Connection</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="invalid_assignment_title">Not a valid title</string>
    <string name="invalid_assignment_path">Not a valid path</string>
    <string name="invalid_assignment_department">You must select a department</string>
    <string name="invalid_assignment_grade">You must select a grade</string>
    <string name="invalid_assignment_subject">You must select a subject</string>
    <string name="successful_adding_assignment_message">The assignment has been added successfully</string>
    <string name="successful_adding_سخعقؤث_message">The source has been added successfully</string>

    <string name="errot_adding_assignment">Sorry, We Couldn\'t add your assignment, please try again later</string>
    <string name="successful_adding_source_message">The Source has been added successfully</string>
    <string name="errot_adding_source">Sorry, We Couldn\'t add your source, please try again later</string>

    <string name="successful_adding_marks_message">The marks has been added successfully</string>
    <string name="error_adding_marks">Sorry, We Couldn\'t add your marks, please try again later</string>
    <string name="error_predict_result">Sorry, We Couldn\'t predict the result, please try again later</string>

    <string name="menu_sources">Sources</string>
    <string name="department_spinner_hint">Choose Department</string>
    <string name="department_text">Department :</string>
    <string name="add_source_text">Add New Source :</string>
    <string name="title_text">Title :</string>
    <string name="add_source_title_hint">Enter Source Title</string>
    <string name="add_source_path_text">Path :</string>
    <string name="add_source_path_hint">Enter Source Path</string>
    <string name="add_grade_text">Grade :</string>
    <string name="grade_spinner_hint">Choose Grade</string>
    <string name="add_subject_text">Subject :</string>
    <string name="subject_spinner_hint">Choose Subject</string>
    <string name="upload_text">Upload</string>
    <string name="add_new_assignment_text">Add New Assignment :</string>
    <string name="add_assignment_title_hint">Enter Assignment Title</string>
    <string name="add_assignment_path_hint">Enter Assignment Path</string>
    <string name="show_students_message">Please, Choose a department and grade to show the students.</string>
    <string name="year_work_menu_text">Year Work</string>
    <string name="add_marks_text">Add marks for :</string>
    <string name="add_marks_attendance_text">Attendance :</string>
    <string name="add_marks_attendance_hint">Enter attendance value</string>
    <string name="add_marks_work_text">Work :</string>
    <string name="add_marks_work_hint">Enter Work value</string>
    <string name="add_marks_midterm_text">Midterm :</string>
    <string name="add_marks_midterm_hint">Enter midterm value</string>
    <string name="add_marks_semester_text">Semster :</string>
    <string name="add_semester_path_hint">Enter semster value</string>

    <string name="invalid_marks_attendance">Not a valid attendance value</string>
    <string name="invalid_marks_work">Not a valid work value</string>
    <string name="invalid_marks_midterm">Not a valid midterm value</string>
    <string name="invalid_marks_semester">Not a valid semester value</string>
    <string name="couldnt_sign_in_message">Sorry , Couldn\'t Sign in</string>
    <string name="faculty_text">Faculty :</string>
    <string name="year_text">Year :</string>
    <string name="gpa_profile_text">GPA :</string>
    <string name="national_id">National ID :</string>
    <string name="address_profile_text">Address :</string>
    <string name="student_portal_logo_content_description">Student Portal Logo</string>
    <string name="result_unavailable_message">Result is currently unavailable</string>
    <string name="unavailable_text">unavailable</string>
    <string name="profile_email_text">Email :</string>
    <string name="professor_at_prefix">Professor at</string>
    <string name="office_hours_text">Office Hours :</string>
    <string name="day_text">Day :</string>
    <string name="to_text">To :</string>
    <string name="from_text">From :</string>

    <string name="point_prefix">&#160; :</string>
    <string name="description_text">Description :</string>
    <string name="category_text">Category :</string>
    <string name="projects_text">Projects :</string>
    <string name="border_text">- - - - - - - - - -</string>
    <string name="invalid_source_path_error_message">Sorry, Can\'t Open this Source</string>
    <string name="invalid_assignment_path_error_message">Sorry, Can\'t Open this Assignment</string>
    <string name="year_work_spinner_department_text">Department :</string>
    <string name="year_work_spinner_grade_text">Grade :</string>
    <string name="write_something">Write Something..</string>
    <string name="no_comments_message">This Post doesn\'t have any Comments</string>
    <string name="add_a_comment_message">Add a Comment ..</string>
    <string name="add_a_reply_text">Add a reply</string>
    <string name="view_more_replies_text">View %1$d more replies..</string>
    <string name="choose_group">Choose Group :</string>
    <string name="like_text">Like</string>
    <string name="comment_text">Comment</string>
    <string name="reply_text">Reply</string>
    <string name="likes_text">Likes</string>
    <string name="no_available_posts_message">Sorry, There\'s no available posts.</string>
    <string name="choose_group_text">Please, Choose group to show it\'s Posts.</string>
    <string name="choose_table_text">Please, Choose grade to show it\'s table.</string>

    <string name="comment_writer_image_content_description">Comment Writer Profile Image</string>
    <string name="latest_reply_writer_image_content_description">Latest Reply Writer Image</string>
    <string name="comments_text">Comments</string>
    <string name="predict_result_text">Predict result</string>
    <string name="prediction_dialog_title">Prediction Result :</string>
    <string name="ok_text">OK</string>
    <string name="add_post_success_message">Your Post has been added successfully</string>
    <string name="post_empty_text_error">Can\'t Post Empty Text</string>
    <string name="comment_empty_text_error">Can\'t Comment Empty Text</string>
    <string name="reply_empty_text_error">Can\'t Reply Empty Text</string>

    <string name="add_comment_success_message">Your Comment has been added successfully</string>
    <string name="add_reply_success_message">Your reply has been added successfully</string>
    <string name="logged_out_message">Logged out</string>
    <string name="sorry_there_s_no_available_posts">Sorry, There\'s no available posts.</string>

</resources>
