<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.basemosama.studentportal.ui.professor.add_source.AddSourceViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreyBlue"
        android:paddingBottom="@dimen/add_assignment_bottom_padding">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/add_source_button">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/add_source_title_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:id="@+id/add_source_title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/title_text"
                        android:textColor="@color/colorBlue"
                        android:textSize="@dimen/add_assignment_text_size" />

                    <EditText
                        android:id="@+id/add_source_title_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@xml/edit_text_background"
                        android:ems="10"
                        android:hint="@string/add_source_title_hint"
                        android:padding="15dp"
                        android:text="@={viewModel.title}"
                        android:textColor="@color/colorBlack"
                        app:errorEnabled="true"
                        app:hintEnabled="false" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_source_path_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/add_source_title_linear_layout"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:id="@+id/add_source_path_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:text="@string/add_source_path_text"
                        android:textColor="@color/colorBlue"
                        android:textSize="@dimen/add_assignment_text_size" />

                    <EditText
                        android:id="@+id/add_source_path_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@xml/edit_text_background"
                        android:ems="10"
                        android:hint="@string/add_source_path_hint"
                        android:padding="15dp"
                        android:text="@={viewModel.path}"
                        android:textColor="@color/colorBlack"
                        app:errorEnabled="true"
                        app:hintEnabled="false" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_source_department_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/add_source_path_linear_layout"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/add_source_department_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_weight="2"
                        android:text="@string/department_text"
                        android:textColor="@color/colorBlue"
                        android:textSize="@dimen/add_assignment_text_size" />

                    <com.skydoves.powerspinner.PowerSpinnerView
                        android:id="@+id/source_department_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:background="@color/dropDownViewColor"
                        android:gravity="center"
                        android:hint="@string/department_spinner_hint"
                        android:padding="15dp"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textSize="16sp"
                        app:spinner_arrow_gravity="end"
                        app:spinner_arrow_padding="8dp"
                        app:spinner_divider_color="@color/colorWhite"
                        app:spinner_divider_show="true"
                        app:spinner_divider_size="1dp"
                        app:spinner_popup_animation="dropdown"
                        app:spinner_popup_background="@color/dropDownViewLightColor"
                        app:spinner_popup_elevation="14dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_source_grade_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/add_source_department_linear_layout"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/add_source_grade_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_weight="2"
                        android:text="@string/add_grade_text"
                        android:textColor="@color/colorBlue"
                        android:textSize="@dimen/add_assignment_text_size" />

                    <com.skydoves.powerspinner.PowerSpinnerView
                        android:id="@+id/source_grade_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:background="@color/dropDownViewColor"
                        android:gravity="center"
                        android:hint="@string/grade_spinner_hint"
                        android:padding="15dp"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textSize="16sp"
                        app:spinner_arrow_gravity="end"
                        app:spinner_arrow_padding="8dp"
                        app:spinner_divider_color="@color/colorWhite"
                        app:spinner_divider_show="true"
                        app:spinner_divider_size="1dp"
                        app:spinner_popup_animation="dropdown"
                        app:spinner_popup_background="@color/dropDownViewLightColor"
                        app:spinner_popup_elevation="14dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/add_source_subject_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/add_source_grade_linear_layout"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"

                    >

                    <TextView
                        android:id="@+id/add_source_subject_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_weight="2"
                        android:text="@string/add_subject_text"
                        android:textColor="@color/colorBlue"
                        android:textSize="@dimen/add_assignment_text_size" />

                    <com.skydoves.powerspinner.PowerSpinnerView
                        android:id="@+id/source_subject_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="3"
                        android:background="@color/dropDownViewColor"
                        android:gravity="center"
                        android:hint="@string/subject_spinner_hint"
                        android:padding="15dp"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textSize="16sp"
                        app:spinner_arrow_gravity="end"
                        app:spinner_arrow_padding="8dp"
                        app:spinner_divider_color="@color/colorWhite"
                        app:spinner_divider_show="true"
                        app:spinner_divider_size="1dp"
                        app:spinner_popup_animation="dropdown"
                        app:spinner_popup_background="@color/dropDownViewLightColor"
                        app:spinner_popup_elevation="14dp" />

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>


        <Button
            android:id="@+id/add_source_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@xml/button_background"
            android:onClick="@{viewModel::uploadNewSource}"
            android:text="@string/upload_text"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </RelativeLayout>


</layout>
