<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="project"
            type="com.basemosama.studentportal.model.professor.ProfessorProject" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/profile_project_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorBlue"
            android:textSize="25sp"
            app:text="@{project.title}"
            tools:text="SAS :" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:padding="10dp"

            >

            <TextView
                android:id="@+id/profile_from_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/category_text"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/profile_from_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                app:text="@{project.category}"
                tools:text="Web" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/profile_to_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/year_text"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/profile_to_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                app:text="@{project.year}"
                tools:text="2020" />
        </LinearLayout>

        <TextView
            android:id="@+id/profile_project_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/description_text"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/profile_project_description_value_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            app:text="@{project.body}"
            tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry." />

        <TextView
            android:id="@+id/profile_project_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/border_text"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:visibility="gone" />
    </LinearLayout>

</layout>

